--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -154,36 +154,38 @@
         }
 
         /* Carousel styles */
-		.carousel-container {
-			width: 100%;
-			overflow: hidden;
-			margin-top: -100px;
-		}
+        .carousel-container {
+            width: 100%;
+            overflow: hidden;
+            /* background-color: #f8f9fa; */
+            padding: 5 rem 0; /* Decrease padding to reduce gap */
+            margin-top: -30px;  /* Bring the carousel closer to the page */
+        }
 
-		.carousel-track {
-			display: flex;
-			transition: transform 0.5s ease-in-out;
-		}
+        .carousel-track {
+            display: flex;
+            animation: scroll 20s linear infinite;
+        }
 
-		.carousel-item {
-			flex: 0 0 auto;
-			margin: 0 1rem;
-			text-align: center;
-		}
+        .carousel-item {
+            flex: 0 0 auto;
+            margin: 0 1rem;
+            text-align: center;
+        }
 
-		.carousel-item img {
-			max-width: 150px;
-			height: auto;
-			display: block;
-			margin: 0 auto;
-		}
+        .carousel-item img {
+            max-width: 150px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
 
         @keyframes scroll {
             0% {
                 transform: translateX(0);
             }
             100% {
-                transform: translateX(-100%);
+                transform: translateX(-50%);
             }
         }
     </style>
@@ -220,52 +222,8 @@
                     document.querySelector('.youtube-btn').style.display = 'block';
                 }
             }
-			return configData;
-		}
-
-		document.addEventListener('DOMContentLoaded', function () {
-			const carouselTrack = document.querySelector('.carousel-track');
-			const items = Array.from(carouselTrack.children);
-			let currentIndex = 0;
-
-			// Mouse hover to scroll left
-			carouselTrack.addEventListener('mouseenter', () => {
-				carouselTrack.style.transform = `translateX(-${currentIndex * (items[0].offsetWidth + 16)}px)`; // 16 is margin
-			});
-
-			// Mouse move for left/right scrolling
-			let mouseStartX = 0;
-			let mouseCurrentX = 0;
-
-			carouselTrack.addEventListener('mousedown', (e) => {
-				mouseStartX = e.clientX;
-				carouselTrack.style.transition = 'none'; // Disable transition during drag
-			});
-
-			document.addEventListener('mouseup', (e) => {
-				mouseCurrentX = e.clientX;
-				const dragDistance = mouseStartX - mouseCurrentX;
-
-				// Drag left (next item)
-				if (dragDistance > 50) {
-					currentIndex = (currentIndex + 1) % items.length; // Loop forward
-				}
-
-				// Drag right (previous item)
-				if (dragDistance < -50) {
-					currentIndex = (currentIndex - 1 + items.length) % items.length; // Loop backward
-				}
-
-				carouselTrack.style.transition = 'transform 0.5s ease-in-out'; // Re-enable transition
-				carouselTrack.style.transform = `translateX(-${currentIndex * (items[0].offsetWidth + 16)}px)`;
-			});
-
-			// Handle looping by updating the index on mouse release
-			document.addEventListener('mouseleave', () => {
-				carouselTrack.style.transform = `translateX(-${currentIndex * (items[0].offsetWidth + 16)}px)`;
-			});
-		});
-
+            return configData;
+        }
 
         // Load menu.json
         async function loadMenu() {
@@ -293,19 +251,22 @@
 
             const carouselTrack = document.querySelector('.carousel-track');
 
-            merchData.forEach(item => {
-                const merchItem = document.createElement('div');
-                merchItem.classList.add('carousel-item');
+            for (let i = 0; i < 2; i++) {
+				merchData.forEach(item => {
+					const merchItem = document.createElement('div');
+					merchItem.classList.add('carousel-item');
 
-                merchItem.innerHTML = `
-                    <a href="${item.link}" target="_blank">
-                        <img src="${item.image}" alt="${item.product_name}">
-                        <p>${item.product_name}</p>
-                        <p>${item.price}</p>
-                    </a>
-                `;
-                carouselTrack.appendChild(merchItem);
-            });
+					merchItem.innerHTML = `
+						<a href="${item.link}" target="_blank">
+							<img src="${item.image}" alt="${item.product_name}">
+							<p>${item.product_name}</p>
+							<p>${item.price}</p>
+						</a>
+					`;
+					carouselTrack.appendChild(merchItem);
+				});
+			}
+			
         }
 
         async function loadStream(service) {
