--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -270,7 +270,7 @@
                 // Calculate the total width of all items and set animation duration accordingly
                 const itemWidth = 150 + 32;  // Assuming each item has 150px width + 32px margin
                 const totalWidth = totalItems * itemWidth;
-                const scrollDuration = (totalWidth) * 0.5;  // Speed up by 2.5x
+                const scrollDuration = (totalWidth / 100) * 1.5;  // Speed up by 2.5x
 
                 // Set dynamic animation duration
                 carouselTrack.style.animation = `scroll ${scrollDuration}s linear infinite`;
