--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -28,14 +28,14 @@
             flex: 1;
         }
         .stream-container {
-            flex: 3.15; 
+            flex: 3.15; /* sets horizontal length dont change */
             display: flex-start;
             flex-direction: column;
             margin-top: 0;
             padding-top: 0;
         }
         .chat-container {
-            flex: 0.85; 
+            flex: 0.85; /* sets horizontal length dont change */
             display: flex;
             flex-direction: column;
             height: 100%;
@@ -121,18 +121,50 @@
             height: calc(100vh - 4rem);
             border: none;
         }
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 250px;
+            height: 100%;
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+        }
+        .sidebar.active {
+            transform: translateX(0);
+        }
+        .sidebar ul {
+            list-style-type: none;
+            padding: 2.25rem 0 0 0;
+        }
+        .sidebar ul li {
+            margin: 1rem 0;
+        }
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        .sidebar .menu-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
 
-        /* New Carousel styles */
+        /* Carousel styles */
         .carousel-container {
             width: 100%;
-            padding: 5rem 0;
-            margin-top: -30px;
-            position: relative;
+            overflow: hidden;
+            /* background-color: #f8f9fa; */
+            padding: 5 rem 0; /* Decrease padding to reduce gap */
+            margin-top: -30px;  /* Bring the carousel closer to the page */
         }
 
         .carousel-track {
             display: flex;
-            transition: transform 0.5s ease-in-out;
+            animation: scroll 16s linear infinite;
         }
 
         .carousel-item {
@@ -148,69 +180,149 @@
             margin: 0 auto;
         }
 
-        .carousel-nav {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            border: none;
-            color: white;
-            font-size: 2rem;
-            cursor: pointer;
-        }
-
-        .carousel-nav.left {
-            left: 10px;
-        }
-
-        .carousel-nav.right {
-            right: 10px;
+        @keyframes scroll {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
         }
     </style>
     <script>
-        let currentSlide = 0;
-        const itemsPerSlide = 8;
-        let merchItems = [];
+        let configData = null;
+        let menuData = null;
 
-        async function loadMerch() {
-            const response = await fetch('merch.json');
-            merchItems = await response.json();
-            showMerch();
-        }
+        // Load config.json
+        async function loadConfig() {
+            if (!configData) {
+                const response = await fetch('config.json');
+                configData = await response.json();
 
-        function showMerch() {
-            const carouselTrack = document.querySelector('.carousel-track');
-            carouselTrack.innerHTML = '';
+                const apiKey = configData.youtube_api_key;
+                const channelId = configData.youtube_channel_id;
 
-            const start = currentSlide * itemsPerSlide;
-            const end = Math.min(start + itemsPerSlide, merchItems.length);
+                if (apiKey && channelId) {
+                    const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+                    const videoResponse = await fetch(apiUrl);
+                    const videoData = await videoResponse.json();
 
-            for (let i = start; i < end; i++) {
-                const item = merchItems[i];
-                const merchItem = document.createElement('div');
-                merchItem.classList.add('carousel-item');
-                merchItem.innerHTML = `
-                    <a href="${item.link}" target="_blank">
-                        <img src="${item.image}" alt="${item.product_name}">
-                        <p>${item.product_name}</p>
-                        <p>${item.price}</p>
-                    </a>
-                `;
-                carouselTrack.appendChild(merchItem);
+                    if (videoData.items.length > 0) {
+                        configData.youtube_live_video_id = videoData.items[0].id.videoId;
+                    }
+                }
+
+                if (configData.twitch_channel) {
+                    document.querySelector('.twitch-btn').style.display = 'block';
+                }
+                if (configData.kick_live_id) {
+                    document.querySelector('.kick-btn').style.display = 'block';
+                }
+                if (configData.youtube_channel_id) {
+                    document.querySelector('.youtube-btn').style.display = 'block';
+                }
             }
+            return configData;
         }
 
-        function nextSlide() {
-            currentSlide = (currentSlide + 1) % Math.ceil(merchItems.length / itemsPerSlide);
-            showMerch();
+        // Load menu.json
+        async function loadMenu() {
+            if (!menuData) {
+                const response = await fetch('menu.json');
+                menuData = await response.json();
+            }
+
+            const menuList = document.getElementById('menu-list');
+            menuList.innerHTML = '';
+            menuData.forEach(item => {
+                const li = document.createElement('li');
+                const a = document.createElement('a');
+                a.href = item.url;
+                a.textContent = item.name;
+                li.appendChild(a);
+                menuList.appendChild(li);
+            });
         }
 
-        function prevSlide() {
-            currentSlide = (currentSlide - 1 + Math.ceil(merchItems.length / itemsPerSlide)) % Math.ceil(merchItems.length / itemsPerSlide);
-            showMerch();
+        // Load merchandise JSON and populate the carousel
+        async function loadMerch() {
+			const config = await loadConfig();
+            const response = await fetch('merch.json');
+            const merchData = await response.json();
+
+            const carouselTrack = document.querySelector('.carousel-track');
+			for (let i = 0; i < 2; i++) {
+				// Prepend a "Tip Jar" item if streamelements_id is available
+				if (config.streamelements_id) {
+					const tipJar = document.createElement('div');
+					tipJar.classList.add('carousel-item');
+					tipJar.innerHTML = `
+						<a href="https://streamelements.com/${config.streamelements_id}/tip" target="_blank">
+							<img src="https://media.influencerupdate.biz/2018/4/88369/streamelements-r225x.png" alt="Tip Jar">
+							<p>Tip Jar</p>
+							<p></p>
+						</a>
+					`;
+					carouselTrack.appendChild(tipJar);
+				}
+
+				merchData.forEach(item => {
+					const merchItem = document.createElement('div');
+					merchItem.classList.add('carousel-item');
+
+					merchItem.innerHTML = `
+						<a href="${item.link}" target="_blank">
+							<img src="${item.image}" alt="${item.product_name}">
+							<p>${item.product_name}</p>
+							<p>${item.price}</p>
+						</a>
+					`;
+					carouselTrack.appendChild(merchItem);
+				});
+			}
+        }
+
+        async function loadStream(service) {
+            const config = await loadConfig();
+
+            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
+            const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+
+            const iframe = document.getElementById('live-stream');
+
+            if (service === 'youtube') {
+                iframe.src = youtubeEmbed;
+            } else if (service === 'twitch') {
+                iframe.src = twitchEmbed;
+            }
+
+            iframe.setAttribute('allowfullscreen', 'true');
+            iframe.setAttribute('allow', 'fullscreen');
+        }
+
+        async function loadChat() {
+            const config = await loadConfig();
+
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}&darkpopout`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+        }
+
+        function switchTab(tabId) {
+            document.querySelectorAll('.tab-content').forEach(content => {
+                content.classList.remove('active');
+            });
+            document.getElementById(tabId).classList.add('active');
+        }
+
+        function toggleSidebar() {
+            document.getElementById('sidebar').classList.toggle('active');
         }
 
         window.onload = async function() {
+            await loadStream('youtube');
+            await loadChat();
+            switchTab('youtube-chat');
+            await loadMenu();
             await loadMerch();  // Load merchandise carousel
         }
     </script>
@@ -244,9 +356,7 @@
 
     <!-- Merchandise Carousel -->
     <div class="carousel-container">
-        <button class="carousel-nav left" onclick="prevSlide()">&#10094;</button>
         <div class="carousel-track"></div>
-        <button class="carousel-nav right" onclick="nextSlide()">&#10095;</button>
     </div>
 
     <div id="sidebar" class="sidebar">
