--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -164,7 +164,7 @@
 
         .carousel-track {
             display: flex;
-            animation: scroll 16s linear infinite;
+            /* animation: scroll 16s linear infinite; */
         }
 
         .carousel-item {
