--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -164,7 +164,7 @@
 
         .carousel-track {
             display: flex;
-            animation: scroll linear infinite; 
+            animation: scroll 1000s linear infinite; 
         }
 
         .carousel-item {
