--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -28,14 +28,14 @@
             flex: 1;
         }
         .stream-container {
-            flex: 3.15; /* sets horizontal length dont change */
+            flex: 3.15;
             display: flex-start;
             flex-direction: column;
             margin-top: 0;
             padding-top: 0;
         }
         .chat-container {
-            flex: 0.85; /* sets horizontal length dont change */
+            flex: 0.85;
             display: flex;
             flex-direction: column;
             height: 100%;
@@ -157,14 +157,12 @@
         .carousel-container {
             width: 100%;
             overflow: hidden;
-            /* background-color: #f8f9fa; */
-            padding: 5 rem 0; /* Decrease padding to reduce gap */
-            margin-top: -30px;  /* Bring the carousel closer to the page */
+            padding: 5rem 0;
+            margin-top: -100px;
         }
 
         .carousel-track {
             display: flex;
-            animation: scroll 8s linear infinite; 
         }
 
         .carousel-item {
@@ -185,13 +183,12 @@
                 transform: translateX(0);
             }
             100% {
-                transform: translateX(-100%);
+                transform: translateX(-50%);
             }
         }
     </style>
     <script>
         let configData = null;
-        let menuData = null;
 
         // Load config.json
         async function loadConfig() {
@@ -246,40 +243,57 @@
 
         // Load merchandise JSON and populate the carousel
         async function loadMerch() {
-			const config = await loadConfig();
+            const config = await loadConfig();
             const response = await fetch('merch.json');
             const merchData = await response.json();
-
             const carouselTrack = document.querySelector('.carousel-track');
-			for (let i = 0; i < 2; i++) {
-				// Prepend a "Tip Jar" item if streamelements_id is available
-				if (config.streamelements_id) {
-					const tipJar = document.createElement('div');
-					tipJar.classList.add('carousel-item');
-					tipJar.innerHTML = `
-						<a href="https://streamelements.com/${config.streamelements_id}/tip" target="_blank">
-							<img src="https://media.influencerupdate.biz/2018/4/88369/streamelements-r225x.png" alt="Tip Jar">
-							<p>Tip Jar</p>
-							<p></p>
-						</a>
-					`;
-					carouselTrack.appendChild(tipJar);
-				}
 
-				merchData.forEach(item => {
-					const merchItem = document.createElement('div');
-					merchItem.classList.add('carousel-item');
+            // Clear existing items in the carousel (optional, for repeated calls)
+            carouselTrack.innerHTML = '';
 
-					merchItem.innerHTML = `
-						<a href="${item.link}" target="_blank">
-							<img src="${item.image}" alt="${item.product_name}">
-							<p>${item.product_name}</p>
-							<p>${item.price}</p>
-						</a>
-					`;
-					carouselTrack.appendChild(merchItem);
-				});
-			}
+            // Prepend a "Tip Jar" item if streamelements_id is available
+            if (config.streamelements_id) {
+                const tipJar = document.createElement('div');
+                tipJar.classList.add('carousel-item');
+                tipJar.innerHTML = `
+                    <a href="https://streamelements.com/${config.streamelements_id}/tip" target="_blank">
+                        <img src="https://media.influencerupdate.biz/2018/4/88369/streamelements-r225x.png" alt="Tip Jar">
+                        <p>Tip Jar</p>
+                        <p></p>
+                    </a>
+                `;
+                carouselTrack.appendChild(tipJar);
+            }
+
+            // Append merchandise items twice for looping effect
+            for (let i = 0; i < 2; i++) {
+                merchData.forEach(item => {
+                    const merchItem = document.createElement('div');
+                    merchItem.classList.add('carousel-item');
+                    merchItem.innerHTML = `
+                        <a href="${item.link}" target="_blank">
+                            <img src="${item.image}" alt="${item.product_name}">
+                            <p>${item.product_name}</p>
+                            <p>${item.price}</p>
+                        </a>
+                    `;
+                    carouselTrack.appendChild(merchItem);
+                });
+            }
+
+            // Calculate the total number of items
+            const totalItems = merchData.length + 1;  // Add 1 for the Tip Jar
+
+            // If there are less than 9 items, don't animate
+            if (totalItems >= 9) {
+                // Calculate the total width of all items and set animation duration accordingly
+                const itemWidth = 150 + 32;  // Assuming each item has 150px width + 32px margin
+                const totalWidth = totalItems * itemWidth;
+                const scrollDuration = (totalWidth / 100) * 1.5;  // Speed up by 1.5x
+
+                // Set dynamic animation duration
+                carouselTrack.style.animation = `scroll ${scrollDuration}s linear infinite`;
+            }
         }
 
         async function loadStream(service) {
@@ -322,9 +336,22 @@
             await loadStream('youtube');
             await loadChat();
             switchTab('youtube-chat');
-            await loadMenu();
+            await loadMenu();  // Load the sidebar menu
             await loadMerch();  // Load merchandise carousel
         }
+
+        // Pause scrolling on mouseover, resume on mouseout
+        document.addEventListener('DOMContentLoaded', () => {
+            const carouselTrack = document.querySelector('.carousel-track');
+
+            carouselTrack.addEventListener('mouseover', () => {
+                carouselTrack.style.animationPlayState = 'paused';
+            });
+
+            carouselTrack.addEventListener('mouseout', () => {
+                carouselTrack.style.animationPlayState = 'running';
+            });
+        });
     </script>
 </head>
 <body>
