--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -155,7 +155,8 @@
 
         /* Carousel styles */
         .carousel-container {
-            width: 100%;
+            align: center
+			width: 80%;
             overflow: hidden;
             /* background-color: #f8f9fa; */
             padding: 5 rem 0; /* Decrease padding to reduce gap */
@@ -280,6 +281,19 @@
 					carouselTrack.appendChild(merchItem);
 				});
 			}
+			            // Calculate the total number of items
+            const totalItems = merchData.length + 1;  // Add 1 for the Tip Jar
+
+            // If there are less than 9 items, don't animate
+            if (totalItems >= 9) {
+                // Calculate the total width of all items and set animation duration accordingly
+                const itemWidth = 150 + 32;  // Assuming each item has 150px width + 32px margin
+                const totalWidth = totalItems * itemWidth;
+                const scrollDuration = (totalWidth / 100) * 0.3;  // Speed up by 1.5x
+
+                // Set dynamic animation duration
+                carouselTrack.style.animation = `scroll ${scrollDuration}s linear infinite`;
+ 
         }
 
         async function loadStream(service) {
@@ -325,6 +339,18 @@
             await loadMenu();
             await loadMerch();  // Load merchandise carousel
         }
+        // Pause scrolling on mouseover, resume on mouseout
+        document.addEventListener('DOMContentLoaded', () => {
+            const carouselTrack = document.querySelector('.carousel-track');
+
+            carouselTrack.addEventListener('mouseover', () => {
+                carouselTrack.style.animationPlayState = 'paused';
+            });
+
+            carouselTrack.addEventListener('mouseout', () => {
+                carouselTrack.style.animationPlayState = 'running';
+            });
+
     </script>
 </head>
 <body>
