--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -325,6 +325,20 @@
             await loadMenu();
             await loadMerch();  // Load merchandise carousel
         }
+
+        // Pause scrolling on mouseover, resume on mouseout
+        document.addEventListener('DOMContentLoaded', () => {
+            const carouselTrack = document.querySelector('.carousel-track');
+
+            carouselTrack.addEventListener('mouseover', () => {
+                carouselTrack.style.animationPlayState = 'paused';
+            });
+
+            carouselTrack.addEventListener('mouseout', () => {
+                carouselTrack.style.animationPlayState = 'running';
+            });
+        });
+
     </script>
 </head>
 <body>
