--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -20,9 +20,13 @@
         }
         main {
             margin-top: 0;
+			margin: 0;
+			padding: 0;
         }
         .main-container {
             padding-top: 0;
+			margin: 0;
+			padding: 0;
             display: flex;
             justify-content: space-between;
             flex: 1;
